--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@ html, body {
   width: 100%;
 }
 
+body {
+  background-image: linear-gradient(to right, rgb(92, 89, 89),rgb(134, 131, 131));
+  background-blend-mode: darken;
+}
+
+#root {
+  height:100%;
+}
 .App {
   
   /* text-align: center; */
