--- a/src/components/mainForm.css
+++ b/src/components/mainForm.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-flow: column;
     width: 100%;
-    height:1000px;
+    height:100%;
     /* background-color:black; */
-    background-image: linear-gradient(to top right, rgb(87, 84, 84),rgb(134, 131, 131));
     color:white;
 }
 
@@ -33,6 +32,7 @@
 
 #submitButton {
     width:100%;
+    margin-bottom: 20px;
 }
 
 .hidden {
